--- a/playbook.yml
+++ b/playbook.yml
@@ -4,8 +4,8 @@
   become: true
   become_user: root
   tasks:
-  - name: install python 2
-    raw: test -e /usr/bin/python || (apt -y update && apt install -y python2-minimal)
+  #- name: install python 2
+   # raw: test -e /usr/bin/python || (apt -y update && apt install -y python2-minimal)
 - hosts: webserver
   roles:
   - server
