--- a/playbook.yml
+++ b/playbook.yml
@@ -1,8 +1,12 @@
 
-- hosts: webserver
+- hosts: workers
   gather_facts: false
   become: true
   become_user: root
+  
+  vars:
+    ansible_ssh_common_args: '-o StrictHostKeyChecking=no'
+
   roles:
   - server
   - php
